add fields to full_block

--- a/src/schemas/full_block.yaml
+++ b/src/schemas/full_block.yaml
@@ -30,3 +30,8 @@
       items:
         type: integer
         format: uint32
+    header_hash:
+      type: string
+      format: hex
+    is_transaction_block:
+      type: boolean
