--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/dkackman/chia-api#readme",
   "dependencies": {
-    "@redocly/openapi-cli": "^1.0.0-beta.95",
+    "@redocly/cli": "^1.0.0-beta.104",
     "redoc-cli": "^0.13.16"
   },
   "devDependencies": {
