--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -35,7 +35,7 @@ components:
   responses:
     empty:
       $ref: "./responses/empty.yaml#/empty"
-    fingerprint:
+    fingerprint_response:
       description: OK
       content:
         application/json:
@@ -47,7 +47,7 @@ components:
                     type: integer
                     format: uint32
               - $ref: "#/components/schemas/apiResponse"
-    transaction_record:
+    transaction_record_response:
       description: OK response with a transaction record and a transaction id.
       content:
         application/json:
@@ -1578,7 +1578,7 @@ paths:
                     type: string
       responses:
         "200":
-          $ref: "#/components/responses/transaction_record"
+          $ref: "#/components/responses/transaction_record_response"
   /cat_set_name:
     post:
       tags:
@@ -1904,7 +1904,29 @@ paths:
                   format: uint64
       responses:
         "200":
-          $ref: "#/components/responses/transaction_record"
+          $ref: "#/components/responses/transaction_record_response"
+  /get_current_derivation_index:
+    post:
+      tags:
+        - Wallet
+      summary: Gets the current derivation index.
+      description: Gets the current derivation index.
+      operationId: get_current_derivation_index
+      requestBody:
+        $ref: "#/components/requestBodies/empty"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - type: object
+                    properties:
+                      index:
+                        type: integer
+                        format: uint32
+                  - $ref: "#/components/schemas/apiResponse"
   /create_signed_transaction:
     post:
       tags:
@@ -1966,7 +1988,7 @@ paths:
                     type: string
       responses:
         "200":
-          $ref: "#/components/responses/transaction_record"
+          $ref: "#/components/responses/transaction_record_response"
   /send_transaction_multi:
     post:
       tags:
@@ -1990,7 +2012,7 @@ paths:
                 - $ref: "#/components/schemas/transaction_input"
       responses:
         "200":
-          $ref: "#/components/responses/transaction_record"
+          $ref: "#/components/responses/transaction_record_response"
   /get_wallet_balance:
     post:
       tags:
@@ -2055,7 +2077,7 @@ paths:
         $ref: "#/components/requestBodies/transaction_id"
       responses:
         "200":
-          $ref: "#/components/responses/transaction_record"
+          $ref: "#/components/responses/transaction_record_response"
   /get_transactions:
     post:
       tags:
@@ -2194,7 +2216,7 @@ paths:
         $ref: "#/components/requestBodies/fingerprint"
       responses:
         "200":
-          $ref: "#/components/responses/fingerprint"
+          $ref: "#/components/responses/fingerprint_response"
   /get_logged_in_fingerprint:
     post:
       tags:
@@ -2206,7 +2228,7 @@ paths:
         $ref: "#/components/requestBodies/empty"
       responses:
         "200":
-          $ref: "#/components/responses/fingerprint"
+          $ref: "#/components/responses/fingerprint_response"
   /get_public_keys:
     post:
       tags:
