--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -1144,6 +1144,14 @@ paths:
                 offer:
                   type: string
                   format: hex
+                fee:
+                  type: integer
+                  format: uint64
+                  default: 0
+                min_coin_amount:
+                  type: integer
+                  format: uint128
+                  default: 0
       responses:
         "200":
           description: OK
@@ -1469,6 +1477,10 @@ paths:
                   type: object
                   additionalProperties:
                     type: string
+                min_coin_amount:
+                  type: integer
+                  format: uint128
+                  default: 0
       responses:
         "200":
           description: OK
@@ -1576,6 +1588,10 @@ paths:
                   type: array
                   items:
                     type: string
+                min_coin_amount:
+                  type: integer
+                  format: uint128
+                  default: 0
       responses:
         "200":
           $ref: "#/components/responses/transaction_record_response"
@@ -1971,7 +1987,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/transaction_input"
+              allOf:
+                - $ref: "#/components/schemas/transaction_input"
+                - type: object
+                  properties:
+                    min_coin_amount:
+                      type: integer
+                      format: uint128
+                      default: 0
       responses:
         "200":
           description: OK
@@ -2018,6 +2041,10 @@ paths:
                   type: array
                   items:
                     type: string
+                min_coin_amount:
+                  type: integer
+                  format: uint128
+                  default: 0
       responses:
         "200":
           $ref: "#/components/responses/transaction_record_response"
