--- a/src/full_node.yaml
+++ b/src/full_node.yaml
@@ -6,7 +6,7 @@ info:
     The RPC ports should not be exposed to the internet. TLS certificates are used to secure the communication 
     [using mutualTLS](https://github.com/dkackman/chia-api/wiki/Mutual-TLS).
 
-    The full node uses port 8555 by default.  
+    The full node uses port 8555 by default.
   version: 1.5.0
   title: Chia RPC
   termsOfService: https://www.chia.net/assets/legal/Guidelines-for-Using-Chia-Network.pdf
@@ -149,7 +149,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/empty"
   /open_connection:
     post:
@@ -175,7 +175,7 @@ paths:
                 port:
                   type: integer
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/empty"
   /close_connection:
     post:
@@ -197,7 +197,7 @@ paths:
                 node_id:
                   type: string
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/empty"
   /get_connections:
     post:
@@ -209,7 +209,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -232,7 +232,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -248,7 +248,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -271,7 +271,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -299,7 +299,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/header_hash"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -320,7 +320,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/start_end"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -354,7 +354,7 @@ paths:
                   type: integer
                   format: uint32
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -375,7 +375,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/header_hash"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -394,9 +394,30 @@ paths:
       description: Get the blocks between a start and end height
       operationId: get_blocks
       requestBody:
-        $ref: "#/components/requestBodies/start_end"
+        required: true
+        description: Start and end heights
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - start
+                - end
+              properties:
+                start:
+                  type: integer
+                  format: uint32
+                end:
+                  type: integer
+                  format: uint32
+                exclude_header_hash:
+                  type: boolean
+                  default: false
+                exclude_reorged:
+                  type: boolean
+                  default: false
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -419,7 +440,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -442,7 +463,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/header_hash"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -484,7 +505,7 @@ paths:
                       type: string
                       format: hex
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -519,7 +540,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -540,7 +561,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -573,7 +594,7 @@ paths:
                   type: string
                   format: hex
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -595,7 +616,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -619,7 +640,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/empty"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -653,7 +674,7 @@ paths:
                   type: string
                   format: hex
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -687,7 +708,7 @@ paths:
                       format: hex
                 - $ref: "#/components/schemas/coin_search_options"
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/coin_records"
   /get_coin_records_by_puzzle_hashes:
     post:
@@ -714,7 +735,7 @@ paths:
                         format: hex
                 - $ref: "#/components/schemas/coin_search_options"
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/coin_records"
   /get_coin_records_by_hint:
     post:
@@ -739,7 +760,7 @@ paths:
                       format: hex
                 - $ref: "#/components/schemas/coin_search_options"
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/coin_records"
   /get_coin_record_by_name:
     post:
@@ -762,7 +783,7 @@ paths:
                   type: string
                   format: hex
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -798,7 +819,7 @@ paths:
                         format: hex
                 - $ref: "#/components/schemas/coin_search_options"
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/coin_records"
   /get_coin_records_by_parent_ids:
     post:
@@ -825,7 +846,7 @@ paths:
                         format: hex
                 - $ref: "#/components/schemas/coin_search_options"
       responses:
-        '200':
+        "200":
           $ref: "#/components/responses/coin_records"
   /get_puzzle_and_solution:
     post:
@@ -852,7 +873,7 @@ paths:
                   type: integer
                   format: uint32
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -883,7 +904,7 @@ paths:
                 spend_bundle:
                   $ref: "#/components/schemas/spend_bundle"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
