update bundle to run publish first

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -67,7 +67,7 @@
             "args": ["@redocly/cli", "bundle", "src/*.yaml", "-o", "build/bundle/", "-d"],
             "problemMatcher": [],
             "dependsOn": [
-                "clean", "prepare"
+                "publish"
             ]
         },
         {
